--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "fe-util",
   "version": "3.9.9",
   "description": "前端工具库",
-  "main": "dist/index.js",
-  "module": "dist/index.esm.js",
+  "main": "dist/index.cjs",
+  "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "files": [
     "dist"
@@ -12,49 +12,43 @@
   "author": "张鹏 <lip2up@qq.com>",
   "license": "MIT",
   "scripts": {
-    "clean": "rimraf ./dist",
-    "doc": "typedoc src && cat util/custom.css >> doc/assets/css/main.css",
-    "build": "yarn clean && rollup -c",
-    "pub": "yarn test && yarn build && yarn publish",
+    "dev": "pnpm unbuild --stub",
+    "build": "pnpm unbuild",
+    "prepublishOnly": "npm run build",
+    "prepack": "pnpm unbuild",
     "test": "jest tests"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.2",
-    "@babel/preset-env": "^7.7.1",
-    "@types/ali-oss": "^6.0.4",
-    "@types/deep-extend": "^0.4.31",
-    "@types/jest": "^24.0.23",
-    "@types/lodash": "^4.14.149",
-    "@types/md5": "^2.1.33",
-    "@types/url-join": "^4.0.0",
-    "@zerollup/ts-transform-paths": "^1.7.7",
-    "jest": "^26.0.1",
-    "lint-staged": "^9.4.3",
-    "rimraf": "^3.0.0",
-    "rollup": "^1.27.3",
-    "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-typescript2": "^0.27.1",
-    "ts-jest": "^26.1.0",
-    "tslint": "^6.1.2",
-    "typedoc": "^0.17.7",
-    "typedoc-plugin-sourcefile-url": "^1.0.6",
-    "typescript": "^4.6.3",
+    "@babel/core": "^7.18.13",
+    "@babel/preset-env": "^7.18.10",
+    "@types/ali-oss": "^6.16.4",
+    "@types/deep-extend": "^0.4.32",
+    "@types/jest": "^24.9.1",
+    "@types/lodash": "^4.14.184",
+    "@types/md5": "^2.3.2",
+    "@types/url-join": "^4.0.1",
+    "jest": "^26.6.3",
+    "lint-staged": "^9.5.0",
+    "rollup": "^1.32.1",
+    "ts-jest": "^26.5.6",
+    "tslint": "^6.1.3",
+    "typescript": "^4.8.2",
+    "unbuild": "^0.8.9",
     "yorkie": "^2.0.0"
   },
   "dependencies": {
     "@types/raf": "^3.4.0",
-    "ali-oss": "^6.1.1",
+    "ali-oss": "^6.17.1",
     "axios": "^0.26.1",
-    "color-parse": "^1.3.8",
-    "core-js": "^3.4.1",
+    "color-parse": "^1.4.2",
+    "core-js": "^3.25.0",
     "deep-extend": "^0.6.0",
     "exif-js": "^2.3.0",
-    "lodash": "^4.17.15",
-    "md5": "^2.2.1",
+    "lodash": "^4.17.21",
+    "md5": "^2.3.0",
     "raf": "^3.4.1",
     "tslib": "^2.4.0",
     "url-join": "^4.0.1"
