--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fe-util",
-  "version": "3.9.9",
+  "version": "6.9.9",
   "description": "前端工具库",
   "main": "dist/index.cjs",
   "module": "dist/index.mjs",
@@ -14,7 +14,7 @@
   "scripts": {
     "dev": "pnpm unbuild --stub",
     "build": "pnpm unbuild",
-    "prepublishOnly": "npm run build",
+    "prepublishOnly": "pnpm run build",
     "prepack": "pnpm unbuild",
     "test": "jest tests"
   },
@@ -22,43 +22,41 @@
     "registry": "https://registry.npmjs.org"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.13",
-    "@babel/preset-env": "^7.18.10",
-    "@types/ali-oss": "^6.16.4",
+    "@babel/core": "^7.21.4",
+    "@babel/preset-env": "^7.21.4",
+    "@types/ali-oss": "^6.16.7",
     "@types/deep-extend": "^0.4.32",
     "@types/jest": "^24.9.1",
-    "@types/lodash": "^4.14.184",
+    "@types/lodash": "^4.14.192",
     "@types/md5": "^2.3.2",
+    "@types/raf": "^3.4.0",
     "@types/url-join": "^4.0.1",
-    "jest": "^26.6.3",
-    "lint-staged": "^9.5.0",
-    "rollup": "^1.32.1",
-    "ts-jest": "^26.5.6",
-    "tslint": "^6.1.3",
-    "typescript": "^4.8.2",
-    "unbuild": "^0.8.9",
+    "jest": "^29.5.0",
+    "lint-staged": "^13.2.0",
+    "rollup": "^3.20.2",
+    "ts-jest": "^29.1.0",
+    "typescript": "^5.0.3",
+    "unbuild": "^1.2.0",
     "yorkie": "^2.0.0"
   },
   "dependencies": {
-    "@types/raf": "^3.4.0",
     "ali-oss": "^6.17.1",
-    "axios": "^0.26.1",
+    "axios": "^1.3.5",
     "color-parse": "^1.4.2",
-    "core-js": "^3.25.0",
+    "core-js": "^3.30.0",
     "deep-extend": "^0.6.0",
     "exif-js": "^2.3.0",
     "lodash": "^4.17.21",
     "md5": "^2.3.0",
     "raf": "^3.4.1",
-    "tslib": "^2.4.0",
-    "url-join": "^4.0.1"
+    "tslib": "^2.5.0"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
   },
   "lint-staged": {
     "*.ts": [
-      "yarn test",
+      "pnpm test",
       "git add"
     ]
   }
